fixed spacing on the lower boxes but needs to be styled

--- a/weather.css
+++ b/weather.css
@@ -202,17 +202,18 @@ sub{
 
 .air h3{
         border-bottom: 2px solid lightgray;
-        padding: 10px;
     }
 
 
 .air{
-    margin: 10px !important;
+    margin: 10px;
+    padding: 10px;
     background-color: white;
 }
 
-.categories label{
-    font-size: 10;
+.categories .label{
+    text-transform: uppercase;
+    font-size: 12;
     font-family: 'Times New Roman', Times, serif;
     position: relative;
     top: 10px;
@@ -255,20 +256,19 @@ sub{
     max-width: 300px;
     display: block;
     margin: auto;
-    justify-content: center !important;
-    
-}
-
-.sidebar-box, #more, .featured, #border, #border-pod{
-    border-top: 1px solid lightgray;
+    justify-content: center;    
 }
 
 .sidebar-boxes{
     background-color: white;
-    justify-content: horizontal;
 }
 
 .sidebar-boxes *{
-   padding: 5px;
+    padding: 0px 5px;
+    margin: 0px;
 }
 
+.sidebar-group, .stories{
+    padding: 5px;
+    border-bottom: 1px solid lightgray;
+}
